--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,62 @@
   justify-content: space-between;
   align-items: center;
 }
+.task-enter {
+  transform: translateX(-350px);
+}
+.task-enter-active {
+  transform: translateX(0px);
+  transition: all 500ms ease-in;
+}
+.task-exit {
+  opacity: 1;
+}
+.task-exit-active {
+ transform: translateX(-350px);
+  transition: all 500ms ease-in;
+}
+
+.overlay_off {
+    position:absolute;
+    display:none;
+    background-color: rgba(0, 0, 0, 0.7);
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+.overlay_on {
+    position:absolute;
+    /*display:none;*/
+    background-color: rgba(0, 0, 0, 0.7);
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+.editWindow_off {
+    position: absolute;
+    width: 300px;
+    height: 30px;
+    display: none;
+    background-color: white;
+    text-align: center;
+
+    top: 50%;
+    left: 50%;
+    margin-left: -150px;
+    margin-top: -75px;
+}
+.editWindow_on {
+     position: absolute;
+     width: 300px;
+     height: 30px;
+     /*display: none;*/
+     background-color: white;
+     text-align: center;
+
+     top: 50%;
+     left: 50%;
+     margin-left: -150px;
+     margin-top: -75px;
+ }
