--- a/src/components/UI/button/MyButton.module.css
+++ b/src/components/UI/button/MyButton.module.css
@@ -15,8 +15,9 @@
     font-size: 8px;
     color: white;
     position: relative;
-    left: -10px;
+    left: -20px;
     bottom: 0px;
+    top: 0px;
     background-color: rgba(231, 69, 69, 0.69);
     height: 15px;
     width: 16px;
